\name{news}
\title{News for Package asremlPlus}
\section{asremlPlus Version 4.1-14 (2019-02-02)}{
  \itemize{
    \item{Revise Wheat vignette and entry in asremlPlus-package documentation.}
    \item{Add Ladybird predictions vignette.}
    \item{Modify printing of \code{wald.tab} by print.asrtests to remove colouring because it causes problems with knitr.}
    }
}
\section{asremlPlus Version 4.1-13 (2019-01-30)}{
  \itemize{
    \item{Add a check to plotPredictions.data.frame to warn when \code{linear.transformation} is supplied.}
    \item{Also remove zero LSDs when calculating overall LSD and sed.range.}
    \item{Add a check to linTransform.alldiffs that factors in LSDby are in the submodel.}
    \item{Add the Wheat example as a vignette.}
    }
}
\section{asremlPlus Version 4.1-12 (2019-01-26)}{
  \itemize{
    \item{Remove LSDs for which sed is effectively zero from the calculation of LSD statistics, provided not all are zero.}
    }
}
\section{asremlPlus Version 4.1-11 (2019-01-21)}{
  \itemize{
    \item{Fix bug in test of the range of SEDs against \code{avsed.tolerance} when caclulating LSDs.}
    \item{Add attributes \code{meanLSD.type} and \code{LSDby} to \code{alldiffs} objects so that redoErrorIntervals.alldiffs can determine these attributes when its \code{meanLSD.type} argument is not set.}
    \item{Add function getTestPvalue.asrtests.}
    \item{Minor documentation changes.}
  }
}
\section{asremlPlus Version 4.1-10 (2019-01-08)}{
  \itemize{
    \item{Add entries for \code{predictions.frame}, \code{alldiffs.object} and \code{asrtests.object} and made changes to the documentation to provide links to these pages.}
    \item{Defined classes alldiffs, asrtests and predictions.frame.}
    \item{Added the functions is.alldiffs, validAlldiffs, is.asrtests, validAsrtests, is.predictions.frame and validPredictionsFrame for validating the objects.}
    \item{Added tests for the validity of objects to methods functions.}