@@ -1,0 +1,4 @@
+%\VignetteIndexEntry{Ladybird data: a predictions example}
+%\VignetteEngine{R.rsp::asis}
+%\VignetteAuthor{Chris Brien}
+%\VignetteKeyword{asremlPlus}
