@@ -1,0 +1,4 @@
+%\VignetteIndexEntry{Wheat data: a spatial analysis example}
+%\VignetteEngine{R.rsp::asis}
+%\VignetteAuthor{Chris Brien}
+%\VignetteKeyword{asremlPlus}
